text edits, links now go somewhere

--- a/index.html
+++ b/index.html
@@ -12,20 +12,11 @@
     </head>
     <body id="bootstrap_1pxdeep">
         <div class="container pushdown">
-            <div class="row hide">
-                <div class="span12">
-                    <div id="main_navbar" class="navbar navbar-inverse">
-                        <div class="navbar-inner">
-
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="row">
                 <div class="span3">
                     <h1>flamingo</h1>
                     <p>Better colors for basic Bootstrap</p>
-                    <a href="#" class="btn btn-block btn-large btn-primary">Download LESS version</a>
+                    <a href="https://github.com/rriepe/flamingo/archive/master.zip" class="btn btn-block btn-large btn-primary">Download LESS version</a>
                     <a href="https://github.com/rriepe/flamingo" class="btn btn-large btn-block btn-info">Github Project</a>
                 </div>
                 <div class="span8 offset1">
@@ -39,14 +30,14 @@
                     </form>
                     <h3>What it does</h3>
                     <div class="row-fluid">
-                        <p>Flamingo bridges <a href="#">SchemeLESS</a> and <a href="#">Bootstrap</a>.</p>
+                        <p>Flamingo bridges <a href="https://github.com/rriepe/schemeless">SchemeLESS</a> and <a href="http://twitter.github.io/bootstrap/">Bootstrap</a>.</p>
                         <p>It gives you better default <strong>button</strong>, <strong>link</strong> and <strong>alert</strong> colors, all based on the seed color you provide.</p>
                         <p>Looking for even more color for your Bootstrap site? Try the <a href="http://rriepe.github.io/1pxdeep/">1pxdeep</a> theme.</p>
                     </div>
                     <h3>How to use it</h3>
                     <div class="row-fluid">
                         <p>Just include <strong>scheme.less</strong> and <strong>flamingo.less</strong> after your other LESS files.</p>
-                        <p>Then, edit @seed-color in <strong>scheme.less</strong>.</p>
+                        <p>Then, edit @seed-color in <strong>flamingo.less</strong> with your desired color.</p>
                     </div>
                     <h3>Buttons</h3>
                     <div class="row-fluid">
@@ -90,17 +81,17 @@
                             </div>
                             <div class="alert alert-success">
                                 <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                <strong>Alerts!</strong> Alert colors are adjusted too.
+                                <strong>Success!</strong> This is a success alert.
                             </div>
                         </div>
                         <div class="span6">
                             <div class="alert alert-info">
                                 <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                <strong>Alerts!</strong> Alert colors are adjusted too.
+                                <strong>Info</strong>
                             </div>
                             <div class="alert alert-warning">
                                 <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                <strong>Alerts!</strong> Alert colors are adjusted too.
+                                <strong>Warning!</strong> This is a warning alert.
                             </div>
                         </div>
                     </div>
