--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
-        <meta name="ROBOTS" content="NOINDEX">
         <link rel="icon" href="../img/favicon.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 
-        <title>Flamingo | Colors for basic bootstrap</title>
+        <title>Flamingo | Better colors for basic bootstrap</title>
     </head>
     <body id="bootstrap_1pxdeep">
         <div class="container pushdown">
