--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <h1>flamingo</h1>
                     <p>Better colors for basic Bootstrap</p>
                     <a href="https://github.com/rriepe/flamingo/archive/master.zip" class="btn btn-block btn-large btn-primary">Download LESS version</a>
-                    <a href="https://github.com/rriepe/flamingo" class="btn btn-large btn-block btn-info">Github Project</a>
+                    <a href="https://github.com/rriepe/flamingo" class="btn btn-large btn-block btn-info">GitHub Project</a>
                 </div>
                 <div class="span8 offset1">
                     <h3>Try it now</h3>
